2009-10-17 Borut Razem <borut.razem AT siol.net>

	* as/asgb/asgb.dsp, as/asgb/Makefile.in, as/asxxsrc/asexpr.c,
	  as/asxxsrc/asmain.c, as/asxxsrc/asout.c, as/asxxsrc/sdas.c,
	  as/asxxsrc/sdas.h, as/hc08/as_hc08.dsp, as/hc08/Makefile.in,
	  as/mcs51/asx8051.dsp, as/mcs51/Makefile.in, as/z80/as_z80.dsp,
	  as/z80/Makefile.in, device/lib/gbz80/Makefile.in,
	  device/lib/hc08/Makefile.in, device/lib/mcs51/Makefile.in,
	  device/lib/z80/Makefile.in, src/ds390/main.c, src/hc08/main.c,
	  src/mcs51/main.c, src/z80/main.c,
	  support/regression/ports/gbz80/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/z80/spec.mk:
	  assemblers remnamed to sdasxxxx:
	    as-gbz80 -> sdasgb,
	    as-hc08 -> sdas6808
	    asx8051 -> sdas8051
	    as-z80 -> sdasz80
	* .version, doc/sdccman.lyx: bumped version to 2.9.4

2009-10-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_fsadd.c: optimized (for mcs51-xstack) and enhanced precision
	  to fix some float_single regression tests
	* device/lib/_fssub.c: optimized
	* device/lib/asinf.c,
	* device/lib/acosf.c,
	* device/lib/asincosf.c: optimized
	* device/lib/mcs51/crtxpop.asm,
	* device/lib/mcs51/crtxpopbits.asm,
	* device/lib/mcs51/crtxpush.asm,
	* device/lib/mcs51/crtxpushr0.asm: new (slow) helper functions for xstack
	* device/lib/mcs51/Makefile.in: added crtxpush... and crtxpop...
	* src/mcs51/gen.c(aopForSym): optimized stack access
	  (xstackRegisters): new, calculates bitmask
	  (saveRegisters, unsaveRegisters): use (slow) crtxpush/pop to save memory
	  (genFunction): optimized stack access
	* src/mcs51/peep.c(removeDeadMove): removed unused parm
	* support/regression/tests/float_single.c: enabled now passing tests

2009-10-12 Borut Razem <borut.razem AT siol.net>

	* as/link/aslink.h, as/link/hc08/lkarea.c, as/link/hc08/lkmain.c,
	  as/link/lkdata.c, as/link/lksym.c, as/link/mcs51/lkarea.c,