@@ -1,3 +1,8 @@
+2009-10-17 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>
+
+	* src/mcs51/gen.c: Fixed bug 2880909
+	* all.dsp, device/lib/make51lib.bat: renamed assemblers to sdasxxxx
+
 2009-10-17 Borut Razem <borut.razem AT siol.net>
 
 	* as/asgb/asgb.dsp, as/asgb/Makefile.in, as/asxxsrc/asexpr.c,
